# Battlesnake

./: Cargo.toml  Dockerfile  fly.toml
src/: api.rs  bitboard.rs  board.rs  heuristic.rs  main.rs  minimax.rs  opponent.rs  simulator.rs  strategy.rs  types.rs
